# face_auth_api

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/api_v1/: routers.py
app/api/api_v1/endpoints/: compare_faces.py  debug.py  index.py  verify_user.py
app/core/: config.py  constants.py  utils.py
app/schemas/: authentication.py
app/services/: face_analysis.py  milvus.py  milvus_store.py
service/: main.py  openapi.json
service/api/api_v1/: routers.py
service/api/api_v1/endpoints/: compare_faces.py
service/core/: config.py  utils.py
service/schemas/: authentication.py
static/js/: redoc.standalone.js  swagger-ui-bundle.js
templates/: index.html
tests/: conftest.py
tests/api/api_v1/endpoints/: test_health_check.py
