[tool.poetry]
name = "face_auth_api"
version = "0.1.0"
description = ""
authors = ["Roman Prudnikov <romanprudnikov1990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
python-multipart = "^0.0.5"
cmake = "^3.24.1.1"
dlib = "^19.24.0"
face-recognition = "^1.3.0"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
